<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <FrameLayout
        android:id="@+id/fl_drawing_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        app:layout_constraintBottom_toTopOf="@id/color_pallet"
        android:background="@drawable/background_drawing_view_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            tools:src="@drawable/austin"/>


        <com.vanchi.doodlenoodle.DrawingView
            android:id="@+id/drawing_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            ></com.vanchi.doodlenoodle.DrawingView>

    </FrameLayout>

    <LinearLayout
        android:id="@+id/color_pallet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/fl_drawing_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ll_buttons"
        >
        <ImageButton
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="2dp"
            android:src="@drawable/pallet_normal"
            android:tag="@color/yellow"
            android:background="@color/yellow"
            android:onClick="paintPalletClicked"
            />
        <ImageButton
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="2dp"
            android:src="@drawable/pallet_normal"
            android:tag="@color/red"
            android:background="@color/red"
            android:onClick="paintPalletClicked"
            />
        <ImageButton
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="2dp"
            android:src="@drawable/pallet_normal"
            android:tag="@color/green"
            android:background="@color/green"
            android:onClick="paintPalletClicked"
            />
        <ImageButton
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="2dp"
            android:src="@drawable/pallet_pressed"
            android:tag="@color/blue"
            android:background="@color/blue"
            android:onClick="paintPalletClicked"
            />
        <ImageButton
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="2dp"
            android:src="@drawable/pallet_normal"
            android:tag="@color/black"
            android:background="@color/black"
            android:onClick="paintPalletClicked"
            />
        <ImageButton
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="2dp"
            android:src="@drawable/pallet_normal"
            android:tag="@color/skin"
            android:background="@color/skin"
            android:onClick="paintPalletClicked"
            />
        <ImageButton
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="2dp"
            android:src="@drawable/pallet_normal"
            android:tag="@color/lollipop"
            android:background="@color/lollipop"
            android:onClick="paintPalletClicked"
            />
        <ImageButton
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="2dp"
            android:src="@drawable/pallet_normal"
            android:tag="@color/random"
            android:background="@color/random"
            android:onClick="paintPalletClicked"
            />
        <ImageButton
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="2dp"
            android:src="@drawable/pallet_normal"
            android:tag="@color/white"
            android:background="@color/white"
            android:onClick="paintPalletClicked"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@+id/color_pallet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/ib_photo_choose"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:src="@drawable/gallery"
            android:scaleType="fitXY"
            android:contentDescription="@string/ib_photo_chooser_desc"
            />
        <ImageButton
            android:id="@+id/undo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:src="@drawable/ic_undo"
            android:scaleType="fitXY"
            android:contentDescription="@string/ib_undo_button_description"
            />
        <ImageButton
            android:id="@+id/redo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:src="@drawable/ic_redo"
            android:scaleType="fitXY"
            android:contentDescription="@string/ib_redo_button_description"
            />

        <ImageButton
            android:id="@+id/paint_brush"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:src="@drawable/paint_brush"
            android:scaleType="fitXY"
            android:contentDescription="@string/id_paint_brush_description"
            />
        <ImageButton
            android:id="@+id/save"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:src="@drawable/ic_save"
            android:scaleType="fitXY"
            android:contentDescription="@string/save_button_description"
            />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>